--- a/src/app/components/kitchen/kitchen.component.html
+++ b/src/app/components/kitchen/kitchen.component.html
@@ -7,8 +7,8 @@
     </div>
 </div>
 
-<div class="d-flex justify-content-start">
-    <div class="d-flex justify-content-start flex-wrap w-75 mx-2 List">
+<div class="d-flex justify-content-start mx-2">
+    <div class="d-flex justify-content-start flex-wrap w-75 List">
         @for (order of orderGroups; track order) {
             <app-order [order]="order"></app-order>
         }
