--- a/src/app/components/kitchen/kitchen.component.html
+++ b/src/app/components/kitchen/kitchen.component.html
@@ -8,21 +8,32 @@
     </div>
 </div>
 
-<div class="d-flex justify-content-start">
-    <div class="d-flex justify-content-start flex-wrap w-75 mx-2 List">
-        @for (order of orderGroups; track order) {
-            <app-order [order]="order"></app-order>
-        }
-    </div>
-    <div class=" justify-content-start mx-2">
-        <div class="card w-25 mx-2 List">
-            <div class="mx-2">
-                <ul>
-                  <li *ngFor="let entry of getSummary() | keyvalue">
-                    {{ entry.key }} x{{ entry.value }}
-                  </li>
-                </ul>
+@if (orders?.length! > 0)
+{
+    <div class="d-flex justify-content-start">
+        <div class="d-flex justify-content-start flex-wrap w-75 mx-2 List">
+            @for (order of orderGroups; track order) {
+                <app-order [order]="order"></app-order>
+            }
+        </div>
+        <div class=" justify-content-start mx-2">
+            <div class="card w-25 mx-2 List">
+                <div class="mx-2">
+                    <ul>
+                      <li *ngFor="let entry of getSummary() | keyvalue">
+                        {{ entry.key }} x{{ entry.value }}
+                      </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
-</div>
+}
+@else
+{
+    <div class="d-flex justify-content-center">
+        <div class="alert alert-info" role="alert">
+            Nessun ordine da visualizzare
+        </div>
+    </div>
+}
