Refactor kitchen component CSS: remove unused margin class

--- a/src/app/components/kitchen/kitchen.component.css
+++ b/src/app/components/kitchen/kitchen.component.css
@@ -5,7 +5,8 @@
 .List{
   min-width: 18em;
   min-height: 14em;
-  max-height: 36em;
+  max-height: 80vh;   
   overflow-y: auto;
   width: 100%;
+  box-sizing: border-box;
 }
