--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -1,4 +1,4 @@
-<div class="card mx-1">
+<div class="card mx-1 my-1">
     @if(isOrderDanger())
     {
         <div class="d-flex justify-content-evenly py-2 bg-danger">
@@ -27,10 +27,7 @@
             <h4>Table: {{order.tableId}}</h4> 
             <h5 class="card-title">
                 Product name:
-                <br>
-                <p *ngFor="let i of [].constructor(order.names?.length || 0); let idx = index">
-                    {{ order.names![idx] }} x{{order.qtys![idx]}}
-                </p>
+                <p *ngFor="let i of [].constructor(order.names?.length || 0); let idx = index">{{ order.names![idx] }} x{{order.qtys![idx]}}</p>
             </h5>
         </div>
     </div>
